# Deimos

./: APP_INTEGRATION_GUIDE.md  LICENSE  README.md  contributing.md  documentation.md  proposal.md
.github/workflows/: build-and-test.yml  validate-circuits.yml
benchmarking-suite/frameworks/circom/: ADDING_HASH_FUNCTIONS.md
benchmarking-suite/frameworks/circom/circuits/blake2s256/: Makefile  circom.circom  proof.json  public.json  verification_key.json
benchmarking-suite/frameworks/circom/circuits/keccak256/: circom.circom  keccak256.circom  proof.json  public.json  verification_key.json
benchmarking-suite/frameworks/circom/circuits/mimc256/: Makefile  circom.circom  circom.r1cs  circom.sym  mimc256.circom  proof.json  public.json  verification_key.json
benchmarking-suite/frameworks/circom/circuits/pedersen/: Makefile  circom.circom  circom.r1cs  circom.sym  circom_0000.zkey  pedersen_0000.zkey  proof.json  (+2 more)
benchmarking-suite/moPro/: CIRCOM_INTEGRATION_GUIDE.md  NOIR_INTEGRATION_GUIDE.md  README.md
benchmarking-suite/moPro/mopro-example-app/: Cargo.toml  Config.toml
benchmarking-suite/moPro/mopro-example-app/flutter/: pubspec.yaml
benchmarking-suite/moPro/mopro-example-app/flutter/assets/: keccak256.json  pedersen.srs  pedersen.zkey  poseidon.srs  sha256.json
benchmarking-suite/moPro/mopro-example-app/flutter/lib/: main.dart
benchmarking-suite/moPro/mopro-example-app/src/: lib.rs
benchmarking-suite/moPro/mopro-example-app/test-vectors/circom/: keccak.wasm  mimc256.wasm  pedersen.wasm  sha256.wasm
benchmarking-suite/moPro/mopro-example-app/tests/bindings/circom/: test_multiplier2.kts  test_multiplier2.swift
benchmarking-suite/moPro/mopro-example-app/tests/bindings/halo2/: test_gemini_fibonacci.kts  test_gemini_fibonacci.swift  test_hyperplonk_fibonacci.kts  test_hyperplonk_fibonacci.swift  test_plonk_fibonacci.kts  test_plonk_fibonacci.swift
benchmarking-suite/moPro/mopro-example-app/web/: Cargo.toml
benchmarking-suite/moPro/mopro-keccack256/: Cargo.toml  Config.toml
benchmarking-suite/moPro/mopro-keccack256/MoproAndroidBindings/uniffi/mopro/: mopro.kt
benchmarking-suite/moPro/mopro-keccack256/flutter/: pubspec.yaml
benchmarking-suite/moPro/mopro-keccack256/flutter/lib/: main.dart
benchmarking-suite/moPro/mopro-keccack256/src/: lib.rs
benchmarking-suite/moPro/mopro-keccack256/tests/bindings/circom/: test_multiplier2.kts  test_multiplier2.swift
benchmarking-suite/moPro/mopro-mimc/: Cargo.toml  Config.toml
benchmarking-suite/moPro/mopro-mimc/flutter/: pubspec.yaml
benchmarking-suite/moPro/mopro-mimc/src/: lib.rs
benchmarking-suite/moPro/mopro-sha256/: Cargo.toml  Config.toml
benchmarking-suite/moPro/mopro-sha256/android/app/src/main/assets/: input_9.json
benchmarking-suite/moPro/mopro-sha256/android/app/src/main/java/com/example/moproapp/: MainActivity.kt
benchmarking-suite/moPro/mopro-sha256/android/app/src/main/java/uniffi/mopro/: mopro.kt
benchmarking-suite/moPro/mopro-sha256/src/: lib.rs
benchmarking-suite/moPro/mopro-sha256/test-vectors/circom/: circom.wasm
website/: CIRCOM_INTEGRATION_GUIDE.d.md  DOCUMENTATION.md  SettingUpMopro.md  package.json
website/src/app/: layout.tsx  page.tsx  table.ts
website/src/app/about/: page.tsx
website/src/app/circuits/: page.tsx
website/src/app/contributing/: page.tsx
website/src/app/docs/: layout.tsx  page.tsx
website/src/app/documentation/: page.tsx
website/src/app/get-started/: page.tsx
website/src/app/mopro/: page.tsx
website_copy/: text.md
website_copy/src/app/: layout.tsx  page.tsx
website_copy/src/app/benchmarks/: page.tsx
website_copy/src/app/circuits/: page.tsx
website_copy/src/app/documentation/: page.tsx
website_copy/src/app/get-started/: page.tsx
(+63 files in other folders)
