
[package]
name = "mopro-keccack256"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = []

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git", branch = "v0.2.x" }
mopro-ffi = { version = "0.3.1", features = ["uniffi"] }
thiserror = "2.0.12"
anyhow = "1.0.99"

# CIRCOM_DEPENDENCIES

circom-prover = "0.1"
rust-witness  = "0.1"
num-bigint    = "0.4.0"
    
# HALO2_DEPENDENCIES
# NOIR_DEPENDENCIES

[build-dependencies]
# CIRCOM_BUILD_DEPENDENCIES

witnesscalc-adapter = "0.1"
rust-witness = "0.1"
    
# HALO2_BUILD_DEPENDENCIES
# NOIR_BUILD_DEPENDENCIES

[dev-dependencies]
mopro-ffi = { version = "0.3.1", features = ["uniffi-tests"] }

# CIRCOM_DEV_DEPENDENCIES

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
    
# HALO2_DEV_DEPENDENCIES
# NOIR_DEV_DEPENDENCIES

    