
[package]
name = "mopro-sha256"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = [
"mopro-ffi/circom", 
# "mopro-ffi/halo2", 
# "mopro-ffi/noir"
]

[dependencies]
mopro-wasm = { git = "https://github.com/zkmopro/mopro.git" }
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
rust-witness = "0.1"
uniffi = { version = "=0.29.0" }
num-bigint = "0.4.0"
thiserror = "2.0.12"
plonk-fibonacci = { package = "plonk-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git" } 
hyperplonk-fibonacci = { package = "hyperplonk-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git" } 
gemini-fibonacci = { package = "gemini-fibonacci", git = "https://github.com/sifnoc/plonkish-fibonacci-sample.git" }

# NOIR_DEPENDENCIES

[build-dependencies]
mopro-ffi = { git = "https://github.com/zkmopro/mopro.git" }
rust-witness = "0.1"
uniffi = { version = "=0.29.0", features = ["build"] }


    